--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
-        "project": [ "./tsconfig.json", "./apps/*/tsconfig.json", "./packages/*/tsconfig.json", "./apps/*/*.config.ts", "./packages/*/*.config.ts" ]
+        "project": [ "./tsconfig.json", "./apps/*/tsconfig.json", "./apps/*/*.config.ts" ]
     },
     "plugins": [
         "@typescript-eslint",
