--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,6 +21,7 @@
         "@mikro-orm/migrations": "^6.4.9",
         "@mikro-orm/postgresql": "^6.4.9",
         "@mikro-orm/reflection": "^6.4.9",
+        "@t3-oss/env-core": "^0.11.0",
         "bcrypt": "^5.1.1",
         "commander": "^12.1.0",
         "express": "^4.19.2",
