--- a/compose.yaml
+++ b/compose.yaml
@@ -11,25 +11,25 @@ services:
             - "3400:3400"
         volumes:
             - .:/app
-        # depends_on:
-        #     - postgres
+        depends_on:
+            - postgres
 
-    # postgres:
-    #     container_name: "test-postgres"
-    #     restart: always
-    #     build:
-    #         context: docker/postgres
-    #     environment:
-    #         - POSTGRES_USER=${DATABASE_USER}
-    #         - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
-    #         - POSTGRES_DB=${DATABASE_NAME}
-    #     expose:
-    #         - "5432"
-    #     healthcheck:
-    #         test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
-    #         interval: 2s
-    #         timeout: 5s
-    #         retries: 10
+    postgres:
+        container_name: "test-postgres"
+        restart: always
+        build:
+            context: docker/postgres
+        environment:
+            - POSTGRES_USER=${DATABASE_USER}
+            - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+            - POSTGRES_DB=${DATABASE_NAME}
+        expose:
+            - "5432"
+        healthcheck:
+            test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+            interval: 2s
+            timeout: 5s
+            retries: 10
 
     # adminer:
     #     container_name: "test-adminer"
