--- a/docker/bun/supervisord.conf
+++ b/docker/bun/supervisord.conf
@@ -10,8 +10,8 @@ file=/run/supervisord.sock
 [supervisorctl]
 serverurl=unix:///run/supervisord.sock
 
-[program:backend]
-command=bun run dev:backend
+[program:dev]
+command=bun run dev
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
