--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-    "name": "@flowlance/flowlance",
+    "name": "test",
     "private": true,
     "type": "module",
     "scripts": {
-        "dev:backend": "bun run --cwd ./apps/backend --env-file ../../.env dev",
-        "build:backend": "bun run --cwd ./apps/backend --env-file ../../.env build",
+        "dev": "bun run --watch src/index.ts",
         "types": "bun tsc --build --verbose",
-        "lint": "bun run eslint --cache --ext .js,.jsx,.ts,.tsx .",
-        "cli": "bun run --cwd ./apps/backend --env-file ../../.env src/command/cli.ts",
-        "mikro-orm": "bun run --cwd ./apps/backend --env-file ../../.env mikro-orm"
+        "cli": "bun run src/cli.ts",
+        "mikro-orm": "bunx --bun mikro-orm"
     },
-    "workspaces": [
-        "apps/*",
-        "packages/*"
-    ],
+    "mikro-orm": {
+        "configPaths": [
+            "./src/orm.ts"
+        ],
+        "useTsNode": false,
+        "alwaysAllowTs": true
+    },
     "browserslist": {
         "production": [
             ">0.2%",
@@ -28,19 +29,19 @@
         ]
     },
     "dependencies": {
+        "@mikro-orm/cli": "^6.4.9",
+        "@mikro-orm/core": "^6.4.9",
+        "@mikro-orm/migrations": "^6.4.9",
+        "@mikro-orm/postgresql": "^6.4.9",
+        "@mikro-orm/reflection": "^6.4.9",
+        "@t3-oss/env-core": "^0.11.0",
+        "commander": "^12.1.0",
+        "express": "^4.19.2",
         "typescript": "^5.6.2",
         "zod": "^3.23.8"
     },
     "devDependencies": {
-        "@types/bcrypt": "^5.0.2",
         "@types/bun": "1.2.8",
-        "@types/express": "^4.17.21",
-        "@types/pg": "^8.11.6",
-        "@types/uuid": "^10.0.0",
-        "@typescript-eslint/eslint-plugin": "^6.2.0",
-        "@typescript-eslint/parser": "^6.2.0",
-        "@typescript/analyze-trace": "^0.10.1",
-        "eslint": "^8.54.0",
-        "uuid": "^10.0.0"
+        "@types/express": "^4.17.21"
     }
 }
