--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
         "testorm": "bun src/testorm.ts"
     },
     "mikro-orm": {
-        "configPaths": [
-            "./src/orm.ts"
-        ],
         "useTsNode": false,
         "alwaysAllowTs": true
     },
@@ -27,19 +24,15 @@
         ]
     },
     "dependencies": {
-        "@mikro-orm/cli": "^6.4.9",
-        "@mikro-orm/core": "^6.4.9",
-        "@mikro-orm/migrations": "^6.4.9",
-        "@mikro-orm/postgresql": "^6.4.9",
-        "@mikro-orm/reflection": "^6.4.9",
-        "@t3-oss/env-core": "^0.11.0",
-        "commander": "^12.1.0",
-        "express": "^4.19.2",
-        "typescript": "^5.6.2",
-        "zod": "^3.23.8"
+        "@mikro-orm/cli": "^6.4.12",
+        "@mikro-orm/core": "^6.4.12",
+        "@mikro-orm/migrations": "^6.4.12",
+        "@mikro-orm/postgresql": "^6.4.12",
+        "@mikro-orm/reflection": "^6.4.12",
+        "typescript": "^5.6.2"
     },
     "devDependencies": {
-        "@types/bun": "1.2.6",
+        "@types/bun": "1.2.8",
         "@types/express": "^4.17.21"
     }
 }
