--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "devDependencies": {
         "@types/bun": "1.2.8",
         "@types/express": "^4.17.21"
+    },
+    "patchedDependencies": {
+        "@mikro-orm/core@6.4.12": "patches/@mikro-orm%2Fcore@6.4.12.patch"
     }
 }
